fix(style.css): change background color from green to rgb(0, 0, 0) for better visual contrast fix(Sketch.ts): temporarily hardcode panelSize to 32 to fix layout issue fix(index.ts): change download button text to "Download Svg" for clarity fix(index.ts): uncomment scaling line and set it to 72 / 25.4 for correct scaling of exported SVG

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,11 @@ body {
     /* margin: 0; */
     padding: 0;
     /* overflow: hidden; */
-    background-color: green;
+    background-color: rgb(0, 0, 0);
 }
 
 /* Scale canvas with resize attribute to full size */
 canvas[resize] {
     width: 100%;
     height: 95%;
-}
+}   
